fixed issue with replypopup overflowing off the screen without scroll a bar

--- a/frontend/src/app/styles/forum.module.css
+++ b/frontend/src/app/styles/forum.module.css
@@ -727,17 +727,18 @@
 
 /*ReplyPopup Styles*/
 .reply_popup_container {
-  position: absolute;
+  position: fixed;
   z-index: 6;
   top: 0;
   bottom: 0;
   left: 0;
   right: 0;
   background-color: rgb(0, 0, 0, 0.5);
+  overflow-y: scroll;
 }
 .reply_popup_container > div {
-  position: fixed;
-  top: 45%;
+  position: relative;
+  top: 40%;
   left: 50%;
   transform: translate(-50%, -50%);
   max-width: 600px;
